--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         }
     
         button img {
+            border: 2px solid red;
+            margin: 3.5px -2px;
             border-radius: 50%;
             height: 90%;
             width: 100%;
